Bug 185824. Type ahead find fails with frames. Also fixes crash from bug 255002. r=timeless, sr=jst